lib/ecell/phonyem/expr/parser.rb
# Autogenerated from a Treetop grammar. Edits may be lost.


require 'ecell/phonyem/expr/parser_utils'

module ECell
  module Phonyem
    module Expr
      module ExpressionProcessScript
        include Treetop::Runtime

        def root
          @root ||= :expression
        end

        module Expression0
          def op
            elements[0]
          end

          def ws1
            elements[1]
          end

          def term
            elements[2]
          end

          def ws2
            elements[3]
          end
        end

        module Expression1
          def op
            elements[0]
          end

          def ws1
            elements[1]
          end

          def term
            elements[2]
          end

          def ws2
            elements[3]
          end
        end

        module Expression2
          def ws1
            elements[0]
          end

          def head
            elements[1]
          end

          def ws2
            elements[2]
          end

          def tail
            elements[3]
          end
        end

        module Expression3
          def ast_node
            left_elem = Utils.find_ast_node_in_cst(head)
            tail.elements.each do |group|
              left_elem = [
                group.op.text_value.to_sym,
                left_elem,
                Utils.find_ast_node_in_cst(group.term)
              ]
            end
            left_elem
          end
        end

        def _nt_expression
          start_index = index
          if node_cache[:expression].has_key?(index)
            cached = node_cache[:expression][index]
            if cached
              cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
              @index = cached.interval.end
            end
            return cached
          end

          i0, s0 = index, []
          r1 = _nt_ws
          s0 << r1
          if r1
            r2 = _nt_term
            s0 << r2
            if r2
              r3 = _nt_ws
              s0 << r3
              if r3
                s4, i4 = [], index
                loop do
                  i5 = index
                  i6, s6 = index, []
                  if has_terminal?('+', false, index)
                    r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
                    @index += 1
                  else
                    terminal_parse_failure('+')
                    r7 = nil
                  end
                  s6 << r7
                  if r7
                    r8 = _nt_ws
                    s6 << r8
                    if r8
                      r9 = _nt_term
                      s6 << r9
                      if r9
                        r10 = _nt_ws
                        s6 << r10
                      end
                    end
                  end
                  if s6.last
                    r6 = instantiate_node(SyntaxNode,input, i6...index, s6)
                    r6.extend(Expression0)
                  else
                    @index = i6
                    r6 = nil
                  end
                  if r6
                    r5 = r6
                  else
                    i11, s11 = index, []
                    if has_terminal?('-', false, index)
                      r12 = instantiate_node(SyntaxNode,input, index...(index + 1))
                      @index += 1
                    else
                      terminal_parse_failure('-')
                      r12 = nil
                    end
                    s11 << r12
                    if r12
                      r13 = _nt_ws
                      s11 << r13
                      if r13
                        r14 = _nt_term
                        s11 << r14
                        if r14
                          r15 = _nt_ws
                          s11 << r15
                        end
                      end
                    end
                    if s11.last
                      r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
                      r11.extend(Expression1)
                    else
                      @index = i11
                      r11 = nil
                    end
                    if r11
                      r5 = r11
                    else
                      @index = i5
                      r5 = nil
                    end
                  end
                  if r5
                    s4 << r5
                  else
                    break
                  end
                end
                r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
                s0 << r4
              end
            end
          end
          if s0.last
            r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
            r0.extend(Expression2)
            r0.extend(Expression3)
          else
            @index = i0
            r0 = nil
          end

          node_cache[:expression][start_index] = r0

          r0
        end

        module Term0
          def op
            elements[0]
          end

          def ws1
            elements[1]
          end

          def power
            elements[2]
          end

          def ws2
            elements[3]
          end
        end

        module Term1
          def op
            elements[0]
          end

          def power
            elements[1]
          end

          def ws
            elements[2]
          end
        end

        module Term2
          def head
            elements[0]
          end

          def ws
            elements[1]
          end

          def tail
            elements[2]
          end
        end

        module Term3
          def ast_node
            left_elem = Utils.find_ast_node_in_cst(head)
            tail.elements.each do |group|
              left_elem = [
                group.op.text_value.to_sym,
                left_elem,
                Utils.find_ast_node_in_cst(group.power)
              ]
            end
            left_elem
          end
        end

        def _nt_term
          start_index = index
          if node_cache[:term].has_key?(index)
            cached = node_cache[:term][index]
            if cached
              cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
              @index = cached.interval.end
            end
            return cached
          end

          i0, s0 = index, []
          r1 = _nt_power
          s0 << r1
          if r1
            r2 = _nt_ws
            s0 << r2
            if r2
              s3, i3 = [], index
              loop do
                i4 = index
                i5, s5 = index, []
                if has_terminal?('*', false, index)
                  r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure('*')
                  r6 = nil
                end
                s5 << r6
                if r6
                  r7 = _nt_ws
                  s5 << r7
                  if r7
                    r8 = _nt_power
                    s5 << r8
                    if r8
                      r9 = _nt_ws
                      s5 << r9
                    end
                  end
                end
                if s5.last
                  r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
                  r5.extend(Term0)
                else
                  @index = i5
                  r5 = nil
                end
                if r5
                  r4 = r5
                else
                  i10, s10 = index, []
                  if has_terminal?('/', false, index)
                    r11 = instantiate_node(SyntaxNode,input, index...(index + 1))
                    @index += 1
                  else
                    terminal_parse_failure('/')
                    r11 = nil
                  end
                  s10 << r11
                  if r11
                    r12 = _nt_power
                    s10 << r12
                    if r12
                      r13 = _nt_ws
                      s10 << r13
                    end
                  end
                  if s10.last
                    r10 = instantiate_node(SyntaxNode,input, i10...index, s10)
                    r10.extend(Term1)
                  else
                    @index = i10
                    r10 = nil
                  end
                  if r10
                    r4 = r10
                  else
                    @index = i4
                    r4 = nil
                  end
                end
                if r4
                  s3 << r4
                else
                  break
                end
              end
              r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
              s0 << r3
            end
          end
          if s0.last
            r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
            r0.extend(Term2)
            r0.extend(Term3)
          else
            @index = i0
            r0 = nil
          end

          node_cache[:term][start_index] = r0

          r0
        end

        module Power0
          def ws1
            elements[1]
          end

          def factor
            elements[2]
          end

          def ws2
            elements[3]
          end
        end

        module Power1
          def head
            elements[0]
          end

          def ws
            elements[1]
          end

          def tail
            elements[2]
          end
        end

        module Power2
          def ast_node
            left_elem = Utils.find_ast_node_in_cst(head)
            tail.elements.each do |group|
              left_elem = [
                :^,
                left_elem,
                Utils.find_ast_node_in_cst(group.factor)
              ]
            end
            left_elem
          end
        end

        def _nt_power
          start_index = index
          if node_cache[:power].has_key?(index)
            cached = node_cache[:power][index]
            if cached
              cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
              @index = cached.interval.end
            end
            return cached
          end

          i0, s0 = index, []
          r1 = _nt_factor
          s0 << r1
          if r1
            r2 = _nt_ws
            s0 << r2
            if r2
              s3, i3 = [], index
              loop do
                i4, s4 = index, []
                if has_terminal?('^', false, index)
                  r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure('^')
                  r5 = nil
                end
                s4 << r5
                if r5
                  r6 = _nt_ws
                  s4 << r6
                  if r6
                    r7 = _nt_factor
                    s4 << r7
                    if r7
                      r8 = _nt_ws
                      s4 << r8
                    end
                  end
                end
                if s4.last
                  r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
                  r4.extend(Power0)
                else
                  @index = i4
                  r4 = nil
                end
                if r4
                  s3 << r4
                else
                  break
                end
              end
              r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
              s0 << r3
            end
          end
          if s0.last
            r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
            r0.extend(Power1)
            r0.extend(Power2)
          else
            @index = i0
            r0 = nil
          end

          node_cache[:power][start_index] = r0

          r0
        end

        def _nt_factor
          start_index = index
          if node_cache[:factor].has_key?(index)
            cached = node_cache[:factor][index]
            if cached
              cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
              @index = cached.interval.end
            end
            return cached
          end

          i0 = index
          r1 = _nt_call_func
          if r1
            r0 = r1
          else
            r2 = _nt_system_func
            if r2
              r0 = r2
            else
              r3 = _nt_variable
              if r3
                r0 = r3
              else
                r4 = _nt_constant
                if r4
                  r0 = r4
                else
                  r5 = _nt_group
                  if r5
                    r0 = r5
                  else
                    r6 = _nt_identifier
                    if r6
                      r0 = r6
                    else
                      r7 = _nt_negative
                      if r7
                        r0 = r7
                      else
                        @index = i0
                        r0 = nil
                      end
                    end
                  end
                end
              end
            end
          end

          node_cache[:factor][start_index] = r0

          r0
        end

        def _nt_builtin_func_name
          start_index = index
          if node_cache[:builtin_func_name].has_key?(index)
            cached = node_cache[:builtin_func_name][index]
            if cached
              cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
              @index = cached.interval.end
            end
            return cached
          end

          i0 = index
          if has_terminal?("eq", false, index)
            r1 = instantiate_node(SyntaxNode,input, index...(index + 2))
            @index += 2
          else
            terminal_parse_failure("eq")
            r1 = nil
          end
          if r1
            r0 = r1
          else
            if has_terminal?("neq", false, index)
              r2 = instantiate_node(SyntaxNode,input, index...(index + 3))
              @index += 3
            else
              terminal_parse_failure("neq")
              r2 = nil
            end
            if r2
              r0 = r2
            else
              if has_terminal?("gt", false, index)
                r3 = instantiate_node(SyntaxNode,input, index...(index + 2))
                @index += 2
              else
                terminal_parse_failure("gt")
                r3 = nil
              end
              if r3
                r0 = r3
              else
                if has_terminal?("lt", false, index)
                  r4 = instantiate_node(SyntaxNode,input, index...(index + 2))
                  @index += 2
                else
                  terminal_parse_failure("lt")
                  r4 = nil
                end
                if r4
                  r0 = r4
                else
                  if has_terminal?("geq", false, index)
                    r5 = instantiate_node(SyntaxNode,input, index...(index + 3))
                    @index += 3
                  else
                    terminal_parse_failure("geq")
                    r5 = nil
                  end
                  if r5
                    r0 = r5
                  else
                    if has_terminal?("leq", false, index)
                      r6 = instantiate_node(SyntaxNode,input, index...(index + 3))
                      @index += 3
                    else
                      terminal_parse_failure("leq")
                      r6 = nil
                    end
                    if r6
                      r0 = r6
                    else
                      if has_terminal?("and", false, index)
                        r7 = instantiate_node(SyntaxNode,input, index...(index + 3))
                        @index += 3
                      else
                        terminal_parse_failure("and")
                        r7 = nil
                      end
                      if r7
                        r0 = r7
                      else
                        if has_terminal?("or", false, index)
                          r8 = instantiate_node(SyntaxNode,input, index...(index + 2))
                          @index += 2
                        else
                          terminal_parse_failure("or")
                          r8 = nil
                        end
                        if r8
                          r0 = r8
                        else
                          if has_terminal?("xor", false, index)
                            r9 = instantiate_node(SyntaxNode,input, index...(index + 3))
                            @index += 3
                          else
                            terminal_parse_failure("xor")
                            r9 = nil
                          end
                          if r9
                            r0 = r9
                          else
                            if has_terminal?("not", false, index)
                              r10 = instantiate_node(SyntaxNode,input, index...(index + 3))
                              @index += 3
                            else
                              terminal_parse_failure("not")
                              r10 = nil
                            end
                            if r10
                              r0 = r10
                            else
                              if has_terminal?("abs", false, index)
                                r11 = instantiate_node(SyntaxNode,input, index...(index + 3))
                                @index += 3
                              else
                                terminal_parse_failure("abs")
                                r11 = nil
                              end
                              if r11
                                r0 = r11
                              else
                                if has_terminal?("sqrt", false, index)
                                  r12 = instantiate_node(SyntaxNode,input, index...(index + 4))
                                  @index += 4
                                else
                                  terminal_parse_failure("sqrt")
                                  r12 = nil
                                end
                                if r12
                                  r0 = r12
                                else
                                  if has_terminal?("pow", false, index)
                                    r13 = instantiate_node(SyntaxNode,input, index...(index + 3))
                                    @index += 3
                                  else
                                    terminal_parse_failure("pow")
                                    r13 = nil
                                  end
                                  if r13
                                    r0 = r13
                                  else
                                    if has_terminal?("exp", false, index)
                                      r14 = instantiate_node(SyntaxNode,input, index...(index + 3))
                                      @index += 3
                                    else
                                      terminal_parse_failure("exp")
                                      r14 = nil
                                    end
                                    if r14
                                      r0 = r14
                                    else
                                      if has_terminal?("log10", false, index)
                                        r15 = instantiate_node(SyntaxNode,input, index...(index + 5))
                                        @index += 5
                                      else
                                        terminal_parse_failure("log10")
                                        r15 = nil
                                      end
                                      if r15
                                        r0 = r15
                                      else
                                        if has_terminal?("log", false, index)
                                          r16 = instantiate_node(SyntaxNode,input, index...(index + 3))
                                          @index += 3
                                        else
                                          terminal_parse_failure("log")
                                          r16 = nil
                                        end
                                        if r16
                                          r0 = r16
                                        else
                                          if has_terminal?("floor", false, index)
                                            r17 = instantiate_node(SyntaxNode,input, index...(index + 5))
                                            @index += 5
                                          else
                                            terminal_parse_failure("floor")
                                            r17 = nil
                                          end
                                          if r17
                                            r0 = r17
                                          else
                                            if has_terminal?("ceil", false, index)
                                              r18 = instantiate_node(SyntaxNode,input, index...(index + 4))
                                              @index += 4
                                            else
                                              terminal_parse_failure("ceil")
                                              r18 = nil
                                            end
                                            if r18
                                              r0 = r18
                                            else
                                              if has_terminal?("sin", false, index)
                                                r19 = instantiate_node(SyntaxNode,input, index...(index + 3))
                                                @index += 3
                                              else
                                                terminal_parse_failure("sin")
                                                r19 = nil
                                              end
                                              if r19
                                                r0 = r19
                                              else
                                                if has_terminal?("cos", false, index)
                                                  r20 = instantiate_node(SyntaxNode,input, index...(index + 3))
                                                  @index += 3
                                                else
                                                  terminal_parse_failure("cos")
                                                  r20 = nil
                                                end
                                                if r20
                                                  r0 = r20
                                                else
                                                  if has_terminal?("tan", false, index)
                                                    r21 = instantiate_node(SyntaxNode,input, index...(index + 3))
                                                    @index += 3
                                                  else
                                                    terminal_parse_failure("tan")
                                                    r21 = nil
                                                  end
                                                  if r21
                                                    r0 = r21
                                                  else
                                                    if has_terminal?("sinh", false, index)
                                                      r22 = instantiate_node(SyntaxNode,input, index...(index + 4))
                                                      @index += 4
                                                    else
                                                      terminal_parse_failure("sinh")
                                                      r22 = nil
                                                    end
                                                    if r22
                                                      r0 = r22
                                                    else
                                                      if has_terminal?("cosh", false, index)
                                                        r23 = instantiate_node(SyntaxNode,input, index...(index + 4))
                                                        @index += 4
                                                      else
                                                        terminal_parse_failure("cosh")
                                                        r23 = nil
                                                      end
                                                      if r23
                                                        r0 = r23
                                                      else
                                                        if has_terminal?("tanh", false, index)
                                                          r24 = instantiate_node(SyntaxNode,input, index...(index + 4))
                                                          @index += 4
                                                        else
                                                          terminal_parse_failure("tanh")
                                                          r24 = nil
                                                        end
                                                        if r24
                                                          r0 = r24
                                                        else
                                                          if has_terminal?("asin", false, index)
                                                            r25 = instantiate_node(SyntaxNode,input, index...(index + 4))
                                                            @index += 4
                                                          else
                                                            terminal_parse_failure("asin")
                                                            r25 = nil
                                                          end
                                                          if r25
                                                            r0 = r25
                                                          else
                                                            if has_terminal?("acos", false, index)
                                                              r26 = instantiate_node(SyntaxNode,input, index...(index + 4))
                                                              @index += 4
                                                            else
                                                              terminal_parse_failure("acos")
                                                              r26 = nil
                                                            end
                                                            if r26
                                                              r0 = r26
                                                            else
                                                              if has_terminal?("atan", false, index)
                                                                r27 = instantiate_node(SyntaxNode,input, index...(index + 4))
                                                                @index += 4
                                                              else
                                                                terminal_parse_failure("atan")
                                                                r27 = nil
                                                              end
                                                              if r27
                                                                r0 = r27
                                                              else
                                                                if has_terminal?("fact", false, index)
                                                                  r28 = instantiate_node(SyntaxNode,input, index...(index + 4))
                                                                  @index += 4
                                                                else
                                                                  terminal_parse_failure("fact")
                                                                  r28 = nil
                                                                end
                                                                if r28
                                                                  r0 = r28
                                                                else
                                                                  if has_terminal?("asinh", false, index)
                                                                    r29 = instantiate_node(SyntaxNode,input, index...(index + 5))
                                                                    @index += 5
                                                                  else
                                                                    terminal_parse_failure("asinh")
                                                                    r29 = nil
                                                                  end
                                                                  if r29
                                                                    r0 = r29
                                                                  else
                                                                    if has_terminal?("acosh", false, index)
                                                                      r30 = instantiate_node(SyntaxNode,input, index...(index + 5))
                                                                      @index += 5
                                                                    else
                                                                      terminal_parse_failure("acosh")
                                                                      r30 = nil
                                                                    end
                                                                    if r30
                                                                      r0 = r30
                                                                    else
                                                                      if has_terminal?("atanh", false, index)
                                                                        r31 = instantiate_node(SyntaxNode,input, index...(index + 5))
                                                                        @index += 5
                                                                      else
                                                                        terminal_parse_failure("atanh")
                                                                        r31 = nil
                                                                      end
                                                                      if r31
                                                                        r0 = r31
                                                                      else
                                                                        if has_terminal?("asech", false, index)
                                                                          r32 = instantiate_node(SyntaxNode,input, index...(index + 5))
                                                                          @index += 5
                                                                        else
                                                                          terminal_parse_failure("asech")
                                                                          r32 = nil
                                                                        end
                                                                        if r32
                                                                          r0 = r32
                                                                        else
                                                                          if has_terminal?("acsch", false, index)
                                                                            r33 = instantiate_node(SyntaxNode,input, index...(index + 5))
                                                                            @index += 5
                                                                          else
                                                                            terminal_parse_failure("acsch")
                                                                            r33 = nil
                                                                          end
                                                                          if r33
                                                                            r0 = r33
                                                                          else
                                                                            if has_terminal?("acoth", false, index)
                                                                              r34 = instantiate_node(SyntaxNode,input, index...(index + 5))
                                                                              @index += 5
                                                                            else
                                                                              terminal_parse_failure("acoth")
                                                                              r34 = nil
                                                                            end
                                                                            if r34
                                                                              r0 = r34
                                                                            else
                                                                              if has_terminal?("sech", false, index)
                                                                                r35 = instantiate_node(SyntaxNode,input, index...(index + 4))
                                                                                @index += 4
                                                                              else
                                                                                terminal_parse_failure("sech")
                                                                                r35 = nil
                                                                              end
                                                                              if r35
                                                                                r0 = r35
                                                                              else
                                                                                if has_terminal?("csch", false, index)
                                                                                  r36 = instantiate_node(SyntaxNode,input, index...(index + 4))
                                                                                  @index += 4
                                                                                else
                                                                                  terminal_parse_failure("csch")
                                                                                  r36 = nil
                                                                                end
                                                                                if r36
                                                                                  r0 = r36
                                                                                else
                                                                                  if has_terminal?("coth", false, index)
                                                                                    r37 = instantiate_node(SyntaxNode,input, index...(index + 4))
                                                                                    @index += 4
                                                                                  else
                                                                                    terminal_parse_failure("coth")
                                                                                    r37 = nil
                                                                                  end
                                                                                  if r37
                                                                                    r0 = r37
                                                                                  else
                                                                                    if has_terminal?("asec", false, index)
                                                                                      r38 = instantiate_node(SyntaxNode,input, index...(index + 4))
                                                                                      @index += 4
                                                                                    else
                                                                                      terminal_parse_failure("asec")
                                                                                      r38 = nil
                                                                                    end
                                                                                    if r38
                                                                                      r0 = r38
                                                                                    else
                                                                                      if has_terminal?("acsc", false, index)
                                                                                        r39 = instantiate_node(SyntaxNode,input, index...(index + 4))
                                                                                        @index += 4
                                                                                      else
                                                                                        terminal_parse_failure("acsc")
                                                                                        r39 = nil
                                                                                      end
                                                                                      if r39
                                                                                        r0 = r39
                                                                                      else
                                                                                        if has_terminal?("acot", false, index)
                                                                                          r40 = instantiate_node(SyntaxNode,input, index...(index + 4))
                                                                                          @index += 4
                                                                                        else
                                                                                          terminal_parse_failure("acot")
                                                                                          r40 = nil
                                                                                        end
                                                                                        if r40
                                                                                          r0 = r40
                                                                                        else
                                                                                          if has_terminal?("sec", false, index)
                                                                                            r41 = instantiate_node(SyntaxNode,input, index...(index + 3))
                                                                                            @index += 3
                                                                                          else
                                                                                            terminal_parse_failure("sec")
                                                                                            r41 = nil
                                                                                          end
                                                                                          if r41
                                                                                            r0 = r41
                                                                                          else
                                                                                            if has_terminal?("csc", false, index)
                                                                                              r42 = instantiate_node(SyntaxNode,input, index...(index + 3))
                                                                                              @index += 3
                                                                                            else
                                                                                              terminal_parse_failure("csc")
                                                                                              r42 = nil
